--- a/MainWindow.xib
+++ b/MainWindow.xib
@@ -12,6 +12,7 @@
     </object>
     <object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
       <bool key="EncodedWithXMLCoder">YES</bool>
+      <integer value="379"/>
       <integer value="1004"/>
       <integer value="336"/>
     </object>
@@ -145,14 +146,13 @@
               <int key="NSvFlags">30</int>
               <string key="NSFrame">{{-8, -11}, {699, 490}}</string>
               <reference key="NSSuperview" ref="470052310"/>
-              <reference key="NSWindow"/>
               <string key="NSReuseIdentifierKey">_NS:559</string>
               <object class="NSMutableArray" key="NSTabViewItems">
                 <bool key="EncodedWithXMLCoder">YES</bool>
                 <object class="NSTabViewItem" id="333672228">
                   <string key="NSIdentifier">1</string>
                   <object class="NSView" key="NSView" id="834002166">
-                    <nil key="NSNextResponder"/>
+                    <reference key="NSNextResponder" ref="276055497"/>
                     <int key="NSvFlags">256</int>
                     <object class="NSMutableArray" key="NSSubviews">
                       <bool key="EncodedWithXMLCoder">YES</bool>
@@ -549,9 +549,10 @@
                                   </object>
                                 </object>
                                 <double key="NSRowHeight">17</double>
-                                <int key="NSTvFlags">-692060160</int>
+                                <int key="NSTvFlags">-155189248</int>
                                 <reference key="NSDelegate"/>
                                 <reference key="NSDataSource"/>
+                                <int key="NSGridStyleMask">3</int>
                                 <int key="NSColumnAutoresizingStyle">4</int>
                                 <int key="NSDraggingSourceMaskForLocal">15</int>
                                 <int key="NSDraggingSourceMaskForNonLocal">0</int>
@@ -685,6 +686,7 @@
                       </object>
                     </object>
                     <string key="NSFrame">{{10, 33}, {679, 444}}</string>
+                    <reference key="NSSuperview" ref="276055497"/>
                     <string key="NSReuseIdentifierKey">_NS:561</string>
                   </object>
                   <string key="NSLabel">Employees</string>
@@ -699,7 +701,7 @@
                 <object class="NSTabViewItem" id="16369268">
                   <string key="NSIdentifier">2</string>
                   <object class="NSView" key="NSView" id="649419719">
-                    <reference key="NSNextResponder" ref="276055497"/>
+                    <nil key="NSNextResponder"/>
                     <int key="NSvFlags">256</int>
                     <object class="NSMutableArray" key="NSSubviews">
                       <bool key="EncodedWithXMLCoder">YES</bool>
@@ -716,17 +718,15 @@
                               <object class="NSTableView" id="127383631">
                                 <reference key="NSNextResponder" ref="514200504"/>
                                 <int key="NSvFlags">274</int>
-                                <string key="NSFrameSize">{623, 426}</string>
+                                <string key="NSFrameSize">{550, 426}</string>
                                 <reference key="NSSuperview" ref="514200504"/>
-                                <reference key="NSWindow"/>
                                 <string key="NSReuseIdentifierKey">_NS:1843</string>
                                 <bool key="NSEnabled">YES</bool>
                                 <object class="NSTableHeaderView" key="NSHeaderView" id="756952607">
                                   <reference key="NSNextResponder" ref="996070227"/>
                                   <int key="NSvFlags">256</int>
-                                  <string key="NSFrameSize">{623, 17}</string>
+                                  <string key="NSFrameSize">{550, 17}</string>
                                   <reference key="NSSuperview" ref="996070227"/>
-                                  <reference key="NSWindow"/>
                                   <string key="NSReuseIdentifierKey">_NS:1845</string>
                                   <reference key="NSTableView" ref="127383631"/>
                                 </object>
@@ -820,7 +820,7 @@
                                     <reference key="NSTableView" ref="127383631"/>
                                   </object>
                                   <object class="NSTableColumn" id="503790251">
-                                    <double key="NSWidth">61</double>
+                                    <double key="NSWidth">59.41796875</double>
                                     <double key="NSMinWidth">10</double>
                                     <double key="NSMaxWidth">3.4028234663852886e+38</double>
                                     <object class="NSTableHeaderCell" key="NSHeaderCell">
@@ -846,7 +846,7 @@
                                     <reference key="NSTableView" ref="127383631"/>
                                   </object>
                                   <object class="NSTableColumn" id="628991460">
-                                    <double key="NSWidth">352.05078125</double>
+                                    <double key="NSWidth">281.41796875</double>
                                     <double key="NSMinWidth">10</double>
                                     <double key="NSMaxWidth">3.4028234663852886e+38</double>
                                     <object class="NSTableHeaderCell" key="NSHeaderCell">
@@ -877,7 +877,7 @@
                                 <reference key="NSBackgroundColor" ref="121087290"/>
                                 <reference key="NSGridColor" ref="399444993"/>
                                 <double key="NSRowHeight">17</double>
-                                <int key="NSTvFlags">-153059328</int>
+                                <int key="NSTvFlags">-155156480</int>
                                 <reference key="NSDelegate"/>
                                 <reference key="NSDataSource"/>
                                 <int key="NSGridStyleMask">3</int>
@@ -890,9 +890,7 @@
                               </object>
                             </object>
                             <string key="NSFrame">{{1, 17}, {550, 426}}</string>
-                            <string key="NSBounds">{{22, 0}, {550, 426}}</string>
                             <reference key="NSSuperview" ref="945498570"/>
-                            <reference key="NSWindow"/>
                             <reference key="NSNextKeyView" ref="127383631"/>
                             <string key="NSReuseIdentifierKey">_NS:1841</string>
                             <reference key="NSDocView" ref="127383631"/>
@@ -904,7 +902,6 @@
                             <int key="NSvFlags">-2147483392</int>
                             <string key="NSFrame">{{224, 17}, {15, 102}}</string>
                             <reference key="NSSuperview" ref="945498570"/>
-                            <reference key="NSWindow"/>
                             <string key="NSReuseIdentifierKey">_NS:1860</string>
                             <reference key="NSTarget" ref="945498570"/>
                             <string key="NSAction">_doScroller:</string>
@@ -913,12 +910,10 @@
                           </object>
                           <object class="NSScroller" id="903259089">
                             <reference key="NSNextResponder" ref="945498570"/>
-                            <int key="NSvFlags">256</int>
+                            <int key="NSvFlags">-2147483392</int>
                             <string key="NSFrame">{{1, 428}, {550, 15}}</string>
                             <reference key="NSSuperview" ref="945498570"/>
-                            <reference key="NSWindow"/>
                             <string key="NSReuseIdentifierKey">_NS:1862</string>
-                            <bool key="NSEnabled">YES</bool>
                             <int key="NSsFlags">1</int>
                             <reference key="NSTarget" ref="945498570"/>
                             <string key="NSAction">_doScroller:</string>
@@ -933,9 +928,7 @@
                               <reference ref="756952607"/>
                             </object>
                             <string key="NSFrame">{{1, 0}, {550, 17}}</string>
-                            <string key="NSBounds">{{22, 0}, {550, 17}}</string>
                             <reference key="NSSuperview" ref="945498570"/>
-                            <reference key="NSWindow"/>
                             <reference key="NSNextKeyView" ref="756952607"/>
                             <string key="NSReuseIdentifierKey">_NS:1846</string>
                             <reference key="NSDocView" ref="756952607"/>
@@ -945,10 +938,9 @@
                         </object>
                         <string key="NSFrame">{{130, -3}, {552, 444}}</string>
                         <reference key="NSSuperview" ref="649419719"/>
-                        <reference key="NSWindow"/>
                         <reference key="NSNextKeyView" ref="514200504"/>
                         <string key="NSReuseIdentifierKey">_NS:1839</string>
-                        <int key="NSsFlags">133810</int>
+                        <int key="NSsFlags">133682</int>
                         <reference key="NSVScroller" ref="154133176"/>
                         <reference key="NSHScroller" ref="903259089"/>
                         <reference key="NSContentView" ref="514200504"/>
@@ -960,7 +952,6 @@
                         <int key="NSvFlags">268</int>
                         <string key="NSFrame">{{17, 166}, {105, 250}}</string>
                         <reference key="NSSuperview" ref="649419719"/>
-                        <reference key="NSWindow"/>
                         <string key="NSReuseIdentifierKey">_NS:736</string>
                         <bool key="NSEnabled">YES</bool>
                         <int key="NSNumRows">7</int>
@@ -1131,7 +1122,6 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
                         <int key="NSvFlags">268</int>
                         <string key="NSFrame">{{17, 95}, {61, 38}}</string>
                         <reference key="NSSuperview" ref="649419719"/>
-                        <reference key="NSWindow"/>
                         <string key="NSReuseIdentifierKey">_NS:736</string>
                         <bool key="NSEnabled">YES</bool>
                         <int key="NSNumRows">2</int>
@@ -1325,7 +1315,6 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
                         <int key="NSvFlags">268</int>
                         <string key="NSFrame">{{14, 424}, {89, 17}}</string>
                         <reference key="NSSuperview" ref="649419719"/>
-                        <reference key="NSWindow"/>
                         <string key="NSReuseIdentifierKey">_NS:4068</string>
                         <bool key="NSEnabled">YES</bool>
                         <object class="NSTextFieldCell" key="NSCell" id="146243538">
@@ -1344,7 +1333,6 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
                         <int key="NSvFlags">268</int>
                         <string key="NSFrame">{{14, 141}, {55, 17}}</string>
                         <reference key="NSSuperview" ref="649419719"/>
-                        <reference key="NSWindow"/>
                         <string key="NSReuseIdentifierKey">_NS:4068</string>
                         <bool key="NSEnabled">YES</bool>
                         <object class="NSTextFieldCell" key="NSCell" id="776999897">
@@ -1363,7 +1351,6 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
                         <int key="NSvFlags">268</int>
                         <string key="NSFrame">{{9, 47}, {66, 32}}</string>
                         <reference key="NSSuperview" ref="649419719"/>
-                        <reference key="NSWindow"/>
                         <string key="NSReuseIdentifierKey">_NS:610</string>
                         <bool key="NSEnabled">YES</bool>
                         <object class="NSButtonCell" key="NSCell" id="401179856">
@@ -1386,7 +1373,6 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
                         <int key="NSvFlags">268</int>
                         <string key="NSFrame">{{9, 15}, {66, 32}}</string>
                         <reference key="NSSuperview" ref="649419719"/>
-                        <reference key="NSWindow"/>
                         <string key="NSReuseIdentifierKey">_NS:610</string>
                         <bool key="NSEnabled">YES</bool>
                         <object class="NSButtonCell" key="NSCell" id="880322131">
@@ -1409,7 +1395,6 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
                         <int key="NSvFlags">268</int>
                         <string key="NSFrame">{{62, 47}, {66, 32}}</string>
                         <reference key="NSSuperview" ref="649419719"/>
-                        <reference key="NSWindow"/>
                         <string key="NSReuseIdentifierKey">_NS:610</string>
                         <bool key="NSEnabled">YES</bool>
                         <object class="NSButtonCell" key="NSCell" id="946244554">
@@ -1429,8 +1414,6 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
                       </object>
                     </object>
                     <string key="NSFrame">{{10, 33}, {679, 444}}</string>
-                    <reference key="NSSuperview" ref="276055497"/>
-                    <reference key="NSWindow"/>
                     <string key="NSReuseIdentifierKey">_NS:571</string>
                   </object>
                   <string key="NSLabel">Days</string>
@@ -1449,20 +1432,19 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
                   <reference key="NSTabView" ref="276055497"/>
                 </object>
               </object>
-              <reference key="NSSelectedTabViewItem" ref="16369268"/>
+              <reference key="NSSelectedTabViewItem" ref="333672228"/>
               <reference key="NSFont" ref="1059030236"/>
               <int key="NSTvFlags">0</int>
               <bool key="NSAllowTruncatedLabels">YES</bool>
               <bool key="NSDrawsBackground">YES</bool>
               <object class="NSMutableArray" key="NSSubviews">
                 <bool key="EncodedWithXMLCoder">YES</bool>
-                <reference ref="649419719"/>
+                <reference ref="834002166"/>
               </object>
             </object>
           </object>
           <string key="NSFrameSize">{683, 485}</string>
           <reference key="NSSuperview"/>
-          <reference key="NSWindow"/>
           <string key="NSReuseIdentifierKey">_NS:122</string>
         </object>
         <string key="NSScreenRect">{{0, 0}, {1280, 778}}</string>
